# insighthub-backend/src/controllers/resources_controller.ts
@@ -1,4 +1,7 @@
 import multer from 'multer';
+import { config } from '../config';
+import fs from 'fs';
+import path from 'path';
 
 const createImageResource = async (req, res) => {
     if (!req.file) {
@@ -6,7 +9,7 @@ const createImageResource = async (req, res) => {
     }
 
     try {
-        res.status(201).send({ imagePath: req.file.path });
+        res.status(201).send(req.file.filename);
     } catch (error) {
         if (error instanceof multer.MulterError) {
             return res.status(400).send(error.message);
@@ -15,4 +18,19 @@ const createImageResource = async (req, res) => {
     }
 };
 
-export default { createImageResource };
+const getImageResource = async (req, res) => {
+    try {
+        const { filename } = req.params;
+        const imagePath = path.resolve(config.resources.imagesDirectoryPath(), filename);
+
+        if (!fs.existsSync(imagePath)) {
+            return res.status(404).send('Image not found');
+        }
+
+        res.sendFile(imagePath);
+    } catch (error) {
+        res.status(500).send('Internal Server Error');
+    }
+};
+
+export default { createImageResource, getImageResource };
