# insighthub-backend/src/openapi/swagger.yaml
@@ -392,14 +392,39 @@ paths:
         '201':
           description: Image uploaded successfully
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
-                properties:
-                  imagePath:
-                    type: string
+                description: The name of the uploaded file
+                type: string                
         '400':
           description: Bad request - No file uploaded
+        '500':
+          description: Internal server error
+
+  /resource/image/{filename}:
+    get:
+      tags:
+        - Resources
+      summary: Retrieve an image
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: filename
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The name of the image file to retrieve
+      responses:
+        '200':
+          description: Image retrieved successfully
+          content:
+            image/*:
+              schema:
+                type: string
+                format: binary
+        '404':
+          description: Image not found
         '500':
           description: Internal server error
 
