# insighthub-backend/src/services/resources_service.ts
@@ -4,28 +4,29 @@ import path from 'path';
 import { randomUUID } from 'crypto';
 import fs from 'fs';
 
-
-// Ensure the directory exists
-const resourcesDir = config.resources.directoryPath();
-if (!fs.existsSync(resourcesDir)) {
-    fs.mkdirSync(resourcesDir);
-}
-
-const storage = multer.diskStorage({
-    destination: (req, file, cb) => {
-        cb(null, `${resourcesDir}/`);
-    },
-    filename: (req, file, cb) => {
-        const ext = path.extname(file.originalname);
-        const id = randomUUID();
-        cb(null, id + ext);
+const createImagesStorage = () => {
+    
+    // Ensure the directory exists
+    const imagesResourcesDir = config.resources.imagesDirectoryPath();
+    if (!fs.existsSync(imagesResourcesDir)) {
+        fs.mkdirSync(imagesResourcesDir);
     }
-});
 
-const uploadImage = multer({
-        storage: storage,
+    const imagesStorage = multer.diskStorage({
+        destination: (req, file, cb) => {
+            cb(null, `${imagesResourcesDir}/`);
+        },
+        filename: (req, file, cb) => {
+            const ext = path.extname(file.originalname);
+            const id = randomUUID();
+            cb(null, id + ext);
+        }
+    });
+
+    const uploadImage = multer({
+        storage: imagesStorage,
         limits: {
-            fileSize: 10 * 1024 * 1024  // Max file size: 10MB
+            fileSize: 10 * 1024 * 1024 // Max file size: 10MB
         },
         fileFilter: (req, file, cb) => {
             const allowedTypes = /jpeg|jpg|png|gif/;
@@ -39,5 +40,10 @@ const uploadImage = multer({
             }
         }
     });
+
+    return uploadImage;
+};
+
+const uploadImage = createImagesStorage();
 
 export { uploadImage };
